test/corpus/comments.txt
================================================================================
Comment on its own line
================================================================================

# This is a comment
play

--------------------------------------------------------------------------------

(source_file
  (comment)
  (structure
    (structure_name
      (identifier))))

================================================================================
Multiple comments
================================================================================

# First comment
# Second comment
play
# Third comment

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (structure
    (structure_name
      (identifier)))
  (comment))

================================================================================
Empty comment
================================================================================

#
play

--------------------------------------------------------------------------------

(source_file
  (comment)
  (structure
    (structure_name
      (identifier))))
