test/corpus/structures.txt
================================================================================
Nested structure block with strings
================================================================================

meta,
    configs = {
        "config1",
        "config2"
    }

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (nested_structure_block
            (field_value
              (value
                (string
                  (string_inner
                    (string_content)))))
            (field_value
              (value
                (string
                  (string_inner
                    (string_content)))))))))))

================================================================================
Simple array
================================================================================

foreach, n=[0, 10]

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (array
            (array_element
              (array_value
                (number)))
            (array_element
              (array_value
                (number)))))))))

================================================================================
Meta with args block single line
================================================================================

meta, args = { "abc" }

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (nested_structure_block
            (field_value
              (value
                (string
                  (string_inner
                    (string_content)))))))))))

================================================================================
Array with nested structure
================================================================================

foreach, actions = { [seek, start=1.0, flags=flush] }

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (nested_structure_block
            (field_value
              (array
                (array_element
                  (array_structure
                    (structure_name
                      (identifier))
                    (field_list
                      (field
                        (field_name
                          (identifier))
                        (field_value
                          (value
                            (number))))
                      (field
                        (field_name
                          (identifier))
                        (field_value
                          (value
                            (unquoted_string)))))))))))))))

================================================================================
Expected issues with embedded structures
================================================================================

meta, expected-issues = {
    "expected-issue, issue-id=test::error",
}

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (nested_structure_block
            (field_value
              (value
                (string
                  (string_inner
                    (string_content)
                    (string_content)
                    (string_content)
                    (string_content)
                    (string_content)
                    (string_content)
                    (string_content)
                    (string_content)
                    (string_content)
                    (string_content)
                    (string_content)
                    (string_content)
                    (string_content)
                    (string_content)))))))))))
