test/corpus/values.txt
================================================================================
Boolean values
================================================================================

meta, handles-states=true, seek=false

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (value
            (boolean))))
      (field
        (field_name
          (identifier))
        (field_value
          (value
            (boolean)))))))

================================================================================
Variable reference
================================================================================

set-globals, sink="$(videosink)"

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (value
            (string
              (string_inner
                (variable)))))))))

================================================================================
Expression
================================================================================

check-position, expected-position="expr((3 + 5) * 0.1)"

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (value
            (string
              (string_inner
                (expression)))))))))

================================================================================
Typed value - float
================================================================================

set-property, value=(float)1.0

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (typed_value
            (type_name)
            (value
              (number))))))))

================================================================================
Typed value - bitmask hex
================================================================================

set-caps, mask=(bitmask)0x67

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (typed_value
            (type_name)
            (value
              (hex_number))))))))

================================================================================
Namespaced identifier
================================================================================

expected-issue, issue-id=scenario::execution-error

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (value
            (namespaced_identifier)))))))

================================================================================
Property path with double colon
================================================================================

set-properties, element::property=50

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (property_path
            (identifier)
            (identifier)))
        (field_value
          (value
            (number)))))))

================================================================================
Property path with element and pad
================================================================================

check-properties, compositor.sink_0::xpos=100

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (property_path
            (identifier)
            (identifier)
            (identifier)))
        (field_value
          (value
            (number)))))))

================================================================================
Angle bracket array
================================================================================

foreach, pattern=<green, blue>

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (angle_bracket_array
            (field_value
              (value
                (unquoted_string)))
            (field_value
              (value
                (unquoted_string)))))))))

================================================================================
Fraction value
================================================================================

set-property, framerate=30/1

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (value
            (fraction)))))))

================================================================================
CLI arguments
================================================================================

meta, args = { -t, --videosink }

--------------------------------------------------------------------------------

(source_file
  (structure
    (structure_name
      (identifier))
    (field_list
      (field
        (field_name
          (identifier))
        (field_value
          (nested_structure_block
            (field_value
              (value
                (cli_argument)))
            (field_value
              (value
                (cli_argument)))))))))
